--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "firebase": "^9.15.0",
+    "mdbootstrap": "^4.20.0",
     "ngx-sharebuttons": "^11.0.0",
     "rxjs": "~7.5.0",
+    "swiper": "^8.4.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
